// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User schema should respond with a list of users 1`] = `
Array [
  Object {
    "createdAt": "2018-12-12T13:00:00",
    "email": "User1@gql.com",
    "id": "1",
    "lastLogin": "2018-12-12T03:14:07",
    "posts": Array [
      Object {
        "createdAt": null,
        "editedAt": null,
        "id": null,
        "message": null,
      },
      Object {
        "createdAt": null,
        "editedAt": null,
        "id": null,
        "message": null,
      },
      Object {
        "createdAt": null,
        "editedAt": null,
        "id": null,
        "message": null,
      },
    ],
    "username": "User1",
  },
  Object {
    "createdAt": "2018-12-11T18:00:00",
    "email": "User2@gql.com",
    "id": "2",
    "lastLogin": "2018-12-13T01:14:07",
    "posts": Array [],
    "username": "User2",
  },
  Object {
    "createdAt": "2018-12-15T19:00:00",
    "email": "User3@gql.com",
    "id": "3",
    "lastLogin": "2018-12-19T02:14:07",
    "posts": Array [
      Object {
        "createdAt": null,
        "editedAt": null,
        "id": null,
        "message": null,
      },
      Object {
        "createdAt": null,
        "editedAt": null,
        "id": null,
        "message": null,
      },
    ],
    "username": "User3",
  },
]
`;

exports[`User schema should respond with an object of a particular user 1`] = `
Object {
  "createdAt": "2018-12-12T13:00:00",
  "email": "User1@gql.com",
  "id": "1",
  "lastLogin": "2018-12-12T03:14:07",
  "posts": Array [
    Object {
      "createdAt": null,
      "editedAt": null,
      "id": null,
      "message": null,
    },
    Object {
      "createdAt": null,
      "editedAt": null,
      "id": null,
      "message": null,
    },
    Object {
      "createdAt": null,
      "editedAt": null,
      "id": null,
      "message": null,
    },
  ],
  "username": "User1",
}
`;
